--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -15,19 +15,19 @@
 @mixin escritorio {
     @media (max-width: v.$escritorio) {
         @content;
-    }    
+    }
 }
 
 @mixin escritorioHD {
     @media (max-width: v.$escritorioHD) {
         @content;
-    }    
+    }
 }
 
 @mixin escritorioFHD {
     @media (max-width: v.$escritorioFHD) {
         @content;
-    }    
+    }
 }
 
 @mixin grid($columnas, $espaciado) {
@@ -55,7 +55,7 @@
 }
 
 @mixin cuadrosInfo($color) {
-    
+
     background: lighten($color,  4);
     border: 5px solid darken($color,  4);
     border-radius: 2rem;
@@ -63,7 +63,7 @@
     z-index: 5;
     box-shadow: 3px 3px 6px -1px rgba(0,0,0,0.75);
     overflow: hidden;
-    
+
 
     .fondo_oscuro{
         position: absolute;
@@ -201,24 +201,54 @@
     position: absolute;
 }
 
-@mixin globo($color, $direccion) {
+@mixin globo($color, $posicion) {
     background: $color;
     padding: 2rem;
     border-radius: 2rem;
     position: relative;
+    color: v.$blanco;
+    text-align: center;
+
+    @include tablet{
+        border-radius: 0;
+    }
 
     &::after{
         content: '';
         position: absolute;
-        clip-path: polygon(0 0, 0% 100%, 100% 50%);
+        clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
         background: $color;
-        top: 20%;
-        width: 3rem;
-        height: 4rem;
+        top: -8%;
+        left: 20%;
+        width: 4rem;
+        height: 3rem;
 
-        @if ($direccion == izquierda){
+        @if($posicion == izquierda){
+            width: 3rem;
+            height: 4rem;
             clip-path: polygon(100% 0, 0 50%, 100% 100%);
-            left: -2.8rem;
+            top: 20%;
+            left: -2%;
+        }
+
+        @if($posicion == derecha){
+            width: 3rem;
+            height: 4rem;
+            clip-path: polygon(0 0, 0% 100%, 100% 50%);
+            top: 20%;
+            left: 95%;
+        }
+
+        @if($posicion == abajo){
+            width: 4rem;
+            height: 3rem;
+            clip-path: polygon(0 0, 50% 100%, 100% 0);
+            top: 99%;
+            left: 20%;
+        }
+
+        @include escritorio(){
+            clip-path: polygon(0% 0%, 0% 0%, 0% 0%);
         }
     }
 }
@@ -271,7 +301,7 @@
             top: 20%;
             left: -2%;
         }
-        
+
         @if($posicion == derecha){
             width: 3rem;
             height: 4rem;
@@ -279,7 +309,7 @@
             top: 20%;
             left: 95%;
         }
-        
+
         @if($posicion == abajo){
             width: 4rem;
             height: 3rem;
@@ -295,56 +325,29 @@
 }
 
 
-@mixin  imagenLibro{
-    position: relative;
-    height: 10rem;
-    width: 18rem;
-    margin-top: -2rem;
-    margin-left: 2rem;
-
-    @include escritorio(){
-        height: 8rem;
-        width: 15rem;
-        margin-left: 0;
-    }
-
-    @include telefono(){
-        width: 100%;
-        height: 8rem;
-        margin-left: 0;
-        margin-right: 0;
-    }
-}
-
-@mixin cuadro($color, $colorBorde, $textAling){
-    display: none;
+@mixin cuadrosPag06($color, $colorBorde, $textAling){
+    overflow: hidden;
     background-color: $color;
     box-shadow: inset 0 2rem 0 0 $colorBorde;
     border-radius: 2rem;
-    margin-left: 2rem;
-    margin-right: 2rem;
-    margin-top: 4rem;
-    margin-bottom: 5rem;
+    padding: 4rem 2rem 2rem 2rem;
     text-align: $textAling;
-    padding: 5rem 2rem 7rem 2rem;
-    height: 50rem;
+    height: 80rem;
+    width: 90%;
 
     @include escritorioHD(){
-        margin-top: 2rem;
-        height: 55rem;
+        padding: 3rem 1rem 1rem 1rem;
+        height: 90rem;
     }
 
-    @include escritorio(){
-        margin-left: 2rem;
-        margin-right: 2rem;
-        padding: 4rem 1rem 7rem 1rem;
+    @include tablet{
+        height: 75rem;
+    }
+
+    @include telefono{
         height: auto;
     }
 
-    @include telefono(){
-        margin-right: 1rem;
-        padding: 5rem 2rem 2rem 2rem;
-    }
 
 }
 
@@ -369,11 +372,37 @@
     }
 }
 
+@mixin botonesPag07 ($fondo){
+    display: block;
+    text-align: center;
+    padding: 2rem 1rem;
+    background: $fondo;
+    transition: all .3s ease;
+    width: 90%;
+    height: 10rem;
+    color: v.$blanco;
+    font-weight: 700;
+
+    &:hover{
+        background: darken($fondo, 5);
+        transform: scale(1.1);
+        box-shadow: 0px 10px 18px -5px rgba(0,0,0,0.75);
+    }
+
+    @include escritorio{
+        font-size: 1.2rem;
+    }
+
+    @include tablet{
+        font-size: 1.5rem;
+    }
+}
+
 @mixin flip-cards ($color, $intensidad) {
-    
-    
+
+
     background: v.$blanco;
-    
+
     .front{
         overflow: hidden;
         border-radius: 2rem;
@@ -427,7 +456,7 @@
             height: 12rem;
             margin: 2rem;
         }
-        
+
         p{
             padding: 2rem;
 
@@ -456,7 +485,7 @@
                 @if($intensidad == claro){
                     background: lighten($color, 5);
                 }
-            } 
+            }
         }
 
         .cont-mensaje-back{
@@ -475,13 +504,13 @@
                 opacity: 1;
                 width: .5rem;
             }
-        
+
             &::-webkit-scrollbar-thumb{
                 background: v.$blanco;
                 border-radius: 1rem;
             }
-            
-        }        
+
+        }
     }
 }
 
@@ -503,7 +532,12 @@
     }
 
     @include tablet{
-        height: 75%;
+        top: 2rem;
+        height: 36rem;
+    }
+
+    @include telefono(){
+        height: auto;
     }
 
     &::before{
@@ -525,7 +559,7 @@
 @mixin flip-cardsPag12 ($intensidad, $fondo, $borde) {
     background: $fondo;
     border-radius: 2rem;
-    
+
     .front{
         overflow: hidden;
         border-radius: 2rem;
@@ -537,7 +571,7 @@
         border-radius: 2rem;
         border: solid 1rem $borde;
         box-shadow: 0px 0px 18px -5px rgba(0,0,0,0.75);
-        
+
     }
 
     .cont-titulo{
@@ -547,7 +581,7 @@
     .back{
 
         .cont-titulo{
-            margin-bottom: 1rem; 
+            margin-bottom: 1rem;
         }
 
         .cont-mensaje-back{
@@ -562,12 +596,12 @@
                 opacity: 1;
                 width: .5rem;
             }
-        
+
             &::-webkit-scrollbar-thumb{
                 background: v.$blanco;
                 border-radius: 1rem;
             }
-            
-        }        
+
+        }
     }
 }
