--- a/src/scss/layouts/_pag07.scss
+++ b/src/scss/layouts/_pag07.scss
@@ -3,22 +3,26 @@
 
 
 #pag07{
+    overflow: hidden;
     position: relative;
     @include m.grid(2, 0);
     display: flex;
+    height: 30rem;
 
     @include m.telefono{
         @include m.grid(1, 0);
     }
 
     #conversacion{
+        overflow: hidden;
         position: relative;
         width: 40%;
+        height: 100%;
         background: v.$azul2;
         padding: 2rem 2rem 0 2rem;
 
         @include m.tablet{
-            width: 78%;
+            width: 90%;
             height: 32rem;
         }
 
@@ -29,30 +33,32 @@
 
     }
     #entrevista{
+        overflow: hidden;
         position: relative;
         width: 100%;
         background: v.$azulRey;
         @include m.resaltar(v.$blanco, 400);
-        padding: 2rem 2rem 2rem 5rem;
+        padding: 2rem 2rem 0 5rem;
 
         h2{
             padding: 2rem 2rem 4rem 2rem;
-        }
-        li{
-            padding-bottom: 1rem;
         }
     }
 }
 
 #pag07-2{
+    overflow: hidden;
+    position: relative;
     background: v.$grisPag07;
     height: 40rem;
 
     @include m.telefono{
         background: v.$colorFuente;
+        height: 60rem;
     }
 
     .personaje{
+        overflow: hidden;
         position: relative;
         top: 2rem;
         left: 10rem;
@@ -78,6 +84,7 @@
     }
 
     #globo{
+        overflow: hidden;
         position: relative;
         width: 30rem;
         top: 4rem;
@@ -87,6 +94,7 @@
         @include m.escritorioHD{
             left: 2rem;
             width: 20rem;
+            top: 2rem;
         }
 
         @include m.telefono{
@@ -97,6 +105,7 @@
     }
 
     #cont-blanco{
+        overflow: hidden;
         position: relative;
         display: flex;
         left: 40rem;
@@ -104,12 +113,12 @@
         border-radius: 2rem;
         width: 70rem;
         height: 90%;
-        top: -28rem;
+        top: -30rem;
 
         @include m.escritorioHD{
             width: 63rem;
             left: 28rem;
-            top: -30rem;
+            top: -34rem;
         }
 
         @include m.tablet{
@@ -131,18 +140,21 @@
         }
 
         .btn01{
+            overflow: hidden;
             position: relative;
             left: 2rem;
             top: 2rem;
             width: 50%;
             #btn-seguros{
+                overflow: hidden;
                 a{
-                    @include m.botones(v.$amarillo);
+                    @include m.botonesPag07(v.$amarillo);
                     color: v.$colorFuente;
                 }
             }
 
             #info-seguros{
+                overflow: hidden;
                 text-align: center;
                 padding-top: 4rem;
                 height: 15rem;
@@ -151,6 +163,16 @@
                 position: relative;
                 background: v.$amarilloPag07;
 
+                @include m.tablet{
+                    top: 2rem;
+                    height: 18rem;
+                }
+
+                @include m.telefono{
+                    height: 20rem;
+                }
+            
+
                 &.cuadros_activos{
                     display: block;
                     opacity: 1;
@@ -158,15 +180,18 @@
             }
         }
         .btn02{
+            overflow: hidden;
             position: relative;
             top: 2rem;
             width: 50%;
             #btn-reaseguradora{
+                overflow: hidden;
                 a{
-                    @include m.botones(v.$azulRey);
+                    @include m.botonesPag07(v.$azulRey);
                 }
             }
             #info-reaseguradora{
+                overflow: hidden;
                 text-align: center;
                 padding-top: 4rem;
                 height: 15rem;
@@ -174,6 +199,15 @@
                 top: 5rem;
                 position: relative;
                 background: v.$azulPag07;
+
+                @include m.tablet{
+                    top: 2rem;
+                    height: 18rem;
+                }
+
+                @include m.telefono{
+                    height: 20rem;
+                }
                 
                 &.cuadros_activos{
                     display: block;
