--- a/src/scss/layouts/_pag12.scss
+++ b/src/scss/layouts/_pag12.scss
@@ -12,8 +12,17 @@
     @include m.grid(2, 0);
     display: flex;
 
+    @include m.escritorioHD{
+        height: 70rem;
+    }
+
     @include m.tablet{
         @include m.grid(1, 0);
+        height: 100rem;
+    }
+
+    @include m.telefono{
+        height: auto;
     }
 
     #cont-01{
@@ -23,6 +32,7 @@
 
         @include m.tablet{
             width: 100%;
+            height: 37rem;
         }
 
         .personaje{
@@ -36,8 +46,8 @@
             }
 
             @include m.tablet{
-                width: 30%;
-                height: 10%;
+                width: 35%;
+                height: 80%;
                 padding: 1rem 2rem 0 10rem;
             }
 
@@ -57,50 +67,56 @@
 
             @include m.escritorioHD{
                 bottom: 0;
-                padding: 3rem;
+                padding: 1rem;
                 top: -1rem;
+                height: 23rem;
+                padding: 4rem;
             }
 
             @include m.tablet{
-                height: 15rem;
-                top: 0;
+                height: 10rem;
+            }
+
+            @include m.telefono{
+                top: -2rem;
             }
 
             p{
                 @include m.tablet{
                     position: relative;
                     left: 10rem;
-                    top: 3rem;
+                    top: -1rem;
                 }
 
                 @include m.telefono{
                     width: 20rem;
                     left: 3rem;
-                    top: 2rem;
+                    top: -3rem;
                 }
             }
             .mano{
                 position: relative;
                 top: 2rem;
-                width: 150%;
-                height: 150%;
+                width: 120%;
+                height: 120%;
 
                 @include m.escritorioHD{
-                    left: -2rem;
-                    width: 250%;
-                    height: 250%;
+                    left: -3rem;
+                    width: 20rem;
+                    height: 5rem;
                 }
 
                 @include m.tablet{
-                    width: 10%;
-                    height: 70%;
+                    width: 5rem;
+                    height: 5rem;
                     left: 5rem;
+                    top: -2rem;
                 }
 
                 @include m.telefono{
                     left: 0;
-                    width: 7rem;
-                    height: 7rem;
+                    width: 5rem;
+                    height: 5rem;
                 }
             }
 
@@ -158,7 +174,7 @@
             }
 
             @include m.telefono{
-                @include m.grid(1, 0);
+                @include m.grid(1, 2rem);
             }
 
 
@@ -176,8 +192,10 @@
                 }
 
                 #info-seguros{
+                    display: flex;
                     @include m.resaltar(v.$azulRey, 400);
                     @include m.cardsPag12(v.$azulRey, v.$azulRey);
+
 
                     &.cuadros_activos{
                         display: block;
@@ -200,6 +218,7 @@
                 }
 
                 #info-seguimiento{
+                    display: flex;
                     @include m.resaltar(v.$verde, 400);
                     @include m.cardsPag12(v.$verde, v.$verde);
 
@@ -224,6 +243,7 @@
                 }
 
                 #info-reportar{
+                    display: flex;
                     @include m.resaltar(v.$verde, 400);
                     @include m.cardsPag12(v.$verdePag12, v.$verdePag12);
 
@@ -254,7 +274,7 @@
 
             @include m.telefono{
                 height: 25rem;
-                width: 27rem;
+                width: 50rem;
             }
         }
 
@@ -275,8 +295,8 @@
             }
 
             @include m.telefono{
-                padding: 2rem;
-                height: 27rem;
+                padding: 1rem;
+                height: 38rem;
                 left: 0;
             }
         }
@@ -300,30 +320,43 @@
                 left: 0;
                 border-radius: 0;
                 padding-left: 10rem;
-                padding-top: 3rem;
+            
             }
 
             @include m.telefono{
-                top: 26rem;
+                top: 36rem;
+                height: 10rem;
                 padding-top: 1rem;
+            }
+
+            p{
+                position: relative;
+                top: -2rem;
             }
 
 
             .mano{
                 position: relative;
                 display: flex;
-                width: 20%;
+                width: 50%;
+
+                @include m.escritorioHD{
+                    width: 70%;
+                }
 
                 @include m.tablet{
-                    width: 10%;
-                    height: 5rem;
+                    width: 9rem;
+                    height: 9rem;
                     left: -5rem;
-                    top: -1rem;
+                    top: -2rem;
                 }
 
                 @include m.telefono{
-                    width: 50%;
+                    position: absolute;
+                    left: 2rem;
                     top: 1rem;
+                    width: 10rem;
+                    height: 10rem;
                 }
             }
         }
@@ -363,7 +396,7 @@
     
             @include m.tablet{
                 top: 6rem;
-                width: 65%;
+                width: 60%;
                 height: 30rem;
             }
     
