--- a/src/scss/layouts/_pag17.scss
+++ b/src/scss/layouts/_pag17.scss
@@ -179,7 +179,7 @@
         }
     }
     .dialogo3{
-        width: 80%;
+        width: 65%;
         @include m.tablet{
             max-width: 350px;
         }
@@ -188,8 +188,8 @@
             margin-top: 3.5%;
             margin-left: 10%;
             padding-bottom: 2%;
-            width: 80%;
-            height: 70%;
+            width: 95%;
+            height: 75%;
             min-height: 30px;
             font-size: 1.1vw;
         }
@@ -197,6 +197,16 @@
             .text-globo{
                 @include m.globoNegro(izquierda);
                 border-radius: 5px !important;
+                width: 70%;
+                min-width: 350px;
+                font-size: 1.3vw;
+                /*@include m.telefono{
+                    width: 30%;
+                }*/
+            }
+            .text-globo::after{
+                left: -5%;
+                clip-path: polygon(100% 0, 0 50%, 100% 100%);
             }
         }
     }
@@ -276,36 +286,88 @@
     .intranet{
         margin-top: 85%;
         display:flex;
-        height: 150px;
+        height: 40%;
+        min-height: 300px;
         width: 100%;
         min-width: 960px;
         background-color: #F8E6E2;
         .persona-computadora{
+            position: relative;
+            width: 10%;
             img{
-                width: 250px;
-                min-height: 180px;
-                padding: 0px 0px 0px 30px;
-            }
-        }
-        .globo1{
-            p{
-                margin-top: 3.5%;
-                margin-left: 10%;
-                padding-bottom: 20px ;
-                width: 75%;
+                width: 90%;
+                padding: 3% 0px 0px 0px;
+                margin-top: 160%;
+                margin-left: 20%;
                 height: 40%;
-                min-height: 100px;
-                font-size: 1.7vh;
-                @include m.globoNegro(izquierda);
             }
         }
+        .dialogo3{
+            position: relative;
+            width: 35%;
+            height: 20%;
+            min-width: 30px;
+            margin-left: -2%;
+            .text-globo{
+                @include m.globoNegro(abajo);
+                margin-left: -15%;
+                width: 90%;
+                min-width: 100px;
+                padding: 2%;
+                margin-top: 5%;
+                height: 5%;
+                font-size: 3vw;
+            }
+            .text-globo::after{
+                clip-path: polygon(0 0, 20% 70%, 100% 0);
+            }
+        }
+        
     }
         
+}
+
+.cuadroazulpag17{
+    display: flex;
+    width: 100%;
+    height: 40%;
+    background-color: #D9EDEF;
+    padding-left: 25%;
+    margin-top: 3%;
+    margin-bottom: 2%;
+    .i-click{
+        margin-top: 0.5%;
+        width: 5%;
+        height: 5%;
+    }
+    p{
+        color: #1a1e1e;
+        text-align: center;
+        padding: 2%;
+    }
+    @include m.tablet{
+        padding-left: 10%;
+        .i-click{
+            margin-top: 1%;
+            width: 8%;
+            height: 8%;
+        }
+        p{
+            color: #1a1e1e;
+            text-align: center;
+            padding: 3%;
+            font-size: 2vw;
+        }
+    }
 }
 
 .carrusel{
     margin-left: 20%;
     width: 60%;
+    @include m.tablet{
+        width: 100%;
+        margin-left: 0%!important;
+    }
     #carouselExampleControls{
         .carousel-inner{
             .carousel-item{
@@ -338,6 +400,10 @@
                             margin-left: 35%;
                             width: 40%;
                             margin-top: 10%;
+                            @include m.tablet{
+                                margin-top: 5%;
+                                width: 38%;
+                            }
                         }
                     }
                 }
@@ -345,14 +411,20 @@
         }
         .carousel-control-next{
             margin-right: -5px;
+            margin-top: -30%;
             .carousel-control-next-icon{
                 position: 500px !important;
                 background-image: url("/build/img/contenido/Pag17/icono-next.svg");
+                width: 40%;
+                height: 5%;
             }
         }
         .carousel-control-prev{
+            margin-top: -30%;
             .carousel-control-prev-icon{
                 background-image: url("/build/img/contenido/Pag17/icono-prev.svg");
+                width: 40%;
+                height: 5%;
             }
         }
     }
