:pencil2 Diseño evaluacion

--- a/src/scss/layouts/_pag04.scss
+++ b/src/scss/layouts/_pag04.scss
@@ -53,6 +53,7 @@
         }
 
         #instrucciones{
+            width: 100%;
             margin-top: 2rem;
             display: flex;
             justify-content: space-between;
